<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/grad_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/charging_station" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtFname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/full_name"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/text_hint_color"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/text_hint_color"
            android:textSize="16sp" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/text_hint_color"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/edtVehicleNo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_baseline_electric_car_24"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/vehicle_number"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/text_hint_color"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/text_hint_color"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/text_hint_color"
            android:textSize="16sp" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_red_button"
            android:padding="3dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/already_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/already_user"
            android:textColor="@color/white_greyish"
            android:textSize="15sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>