<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/grad_bg"
    android:padding="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="40dp"
        android:paddingRight="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/top_layout_shipping_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:visibility="visible">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:src="@drawable/charging_station" />

            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@color/white_greyish"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint_color"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint_color"
                android:textSize="16sp" />


            <!-- Sign in Button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/login_button_selector"
                android:padding="10dp"
                android:text="LOGIN"
                android:textColor="@color/colorPrimary" />

            <ProgressBar
                android:id="@+id/login_progress_bar"
                style="@style/Base.Widget.AppCompat.ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="25dp"
                android:indeterminate="true"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_link_signed_up"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/new_user"
                android:textColor="@color/white"
                android:textSize="15dip" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>